# fastapi-url-shortener

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yaml  pyproject.toml
.github/workflows/: hello-actions.yaml  python-checks.yaml
url-shortener/: .coveragerc  .env.template  app_lifespan.py  config.default.yaml  main.py  stuff.py
url-shortener/api/: main_views.py  redirect_views.py
url-shortener/api/api_v1/auth/services/: __init__.py  redis_tokens_helper.py  redis_users_helper.py  tokens_helper.py  users_helper.py
url-shortener/api/api_v1/short_urls/: crud.py  dependencies.py  redis.py  views.py
url-shortener/commands/: hello.py  tokens.py
url-shortener/core/: config.py
url-shortener/dependencies/: auth.py  short_urls.py
url-shortener/misc/: flash_messages.py
url-shortener/pages/: home.html
url-shortener/rest/: __init__.py  main_views.py
url-shortener/rest/short_urls/: __init__.py  create_views.py  delete_views.py  list_views.py  update_views.py
url-shortener/schemas/: short_url.py
url-shortener/services/auth/: __init__.py  redis_tokens_helper.py  redis_users_helper.py
url-shortener/services/short_urls/: __init__.py  form_response_helper.py
url-shortener/storage/short_urls/: crud.py
url-shortener/templates/: about.html  base.html  home.html
url-shortener/templates/components/: navbar.html
url-shortener/templates/macro/: form_fields.html
url-shortener/templates/short-urls/: create.html  list.html  update.html
url-shortener/templates/short-urls/components/: back-to-list.html
url-shortener/templates/short-urls/macro/: form.html
url-shortener/templating/: __init__.py  jinja_templates.py
url-shortener/testing/: conftest.py
url-shortener/testing/test_api/: conftest.py  test_views.py
url-shortener/testing/test_schemas/: test_short_url.py  test_user.py
(+10 files in other folders)
